Add jar file